WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139830
[WinCairo] Crash after failing to create GL context in accelerated compositing mode.
https://bugs.webkit.org/show_bug.cgi?id=139830
Summary
[WinCairo] Crash after failing to create GL context in accelerated compositin...
peavo
Reported
2014-12-19 12:54:13 PST
There is missing a null pointer check.
Attachments
Patch
(1.47 KB, patch)
2014-12-19 12:57 PST
,
peavo
no flags
Details
Formatted Diff
Diff
Patch
(1.35 KB, patch)
2014-12-19 13:30 PST
,
peavo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2014-12-19 12:57:31 PST
Created
attachment 243569
[details]
Patch
Alex Christensen
Comment 2
2014-12-19 13:25:34 PST
Comment on
attachment 243569
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=243569&action=review
> Source/WebKit/win/WebCoreSupport/AcceleratedCompositingContext.cpp:99 > + m_context = GLContext::createContextForWindow(m_window, GLContext::sharingContext());
What if we already have a context? Shouldn't this also be in an if (!m_context)?
peavo
Comment 3
2014-12-19 13:30:20 PST
Created
attachment 243572
[details]
Patch
peavo
Comment 4
2014-12-19 13:31:02 PST
(In reply to
comment #2
)
> Comment on
attachment 243569
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=243569&action=review
> > > Source/WebKit/win/WebCoreSupport/AcceleratedCompositingContext.cpp:99 > > + m_context = GLContext::createContextForWindow(m_window, GLContext::sharingContext()); > > What if we already have a context? Shouldn't this also be in an if > (!m_context)?
Thanks for reviewing :) Updated patch.
WebKit Commit Bot
Comment 5
2014-12-19 14:06:24 PST
Comment on
attachment 243572
[details]
Patch Clearing flags on attachment: 243572 Committed
r177595
: <
http://trac.webkit.org/changeset/177595
>
WebKit Commit Bot
Comment 6
2014-12-19 14:06:29 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug