[WinCairo] Crash after failing to create GL context in accelerated compositing mode. https://bugs.webkit.org/show_bug.cgi?id=139830

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-12-19
Reviewed by Alex Christensen.

There is missing a null pointer check.

* WebCoreSupport/AcceleratedCompositingContext.cpp:
(AcceleratedCompositingContext::initialize):

Canonical link: https://commits.webkit.org/157758@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177595 268f45cc-cd09-0410-ab3c-d52691b4dbfc